--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -23,27 +23,83 @@
     width: auto;
 }
 
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 2em;
+}
+
 h1 {
     font-family: "BADABB";
-    font-size: 130px;
+    margin: 0;
+}
+
+h2 {
+    font-family: "BADABB";
+    font-size: 35px;
+    letter-spacing: 6px;
 }
 
 p {
     font-family: 'Architects Daughter', cursive;
-    font-size: 28pt;
+    font-size: 2em;
+}
+
+.whiteTitle {
+    -webkit-text-stroke: 0.5px black;
+    color: white;
+    letter-spacing: 3px;
+    font-size: 5em;
+}
+
+.whiteText {
+    color: white;
 }
 
 #mainPage {
     background-image: url("../img/bg.png");
+    margin: 120px 7vw 0 7vw;
+    border-radius: 15px;
+    padding: 30px;
 }
 
 #bulle {
     font-family: 'Architects Daughter', cursive;
+    width: 100%;
+    display: flex;
+    position: relative;
 }
 
-.start {
+.startBtn {
     font-family: "BADABB";
-    font-size: 24pt;
+    font-size: 20px;
     color: black;
     cursor: pointer;
+}
+
+.whiteBckgColor {
+    background-color: white;
+}
+
+.vignette {
+    width: 250px;
+    height: auto;
+}
+
+.bckgChiffre {
+    width: 1000px;
+    height: auto;
+    z-index: -10;
+}
+
+.chiffres {
+    background-image: url("../img/bg-danger.png");
+}
+
+.liChiffres {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
 }
