--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,33 +6,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 body {
     background-color: black;
-    margin: 0 7vw;
+    margin: 0;
+    padding: 0;
 }
 
 p {
-    color: white;
     font-family: 'Architects Daughter', cursive;
     margin: 0;
     padding: 0;
 }
 
 a {
-    color: white;
     font-family: 'badabb';
     text-decoration: none;
+    font-size: 2em;
 }
 
 
 /* -------------------- Nav ------------------ */
 
 .logo {
-    width: 7vw;
+    width: 14vw;
     height: auto;
 }
 
 .logoProfil {
-    width: 20%;
-    height: 100%;
+    width: 100%;
+    height: auto;
+    margin: auto;
 }
 
 .navbar {
@@ -40,9 +41,11 @@ a {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     top: 0;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px 7vw;
+    width: -webkit-fill-available;
 }
 
 .compte {
@@ -53,20 +56,44 @@ a {
     width: calc(14vw + 20px);
 }
 
+.bckgProfil {
+    background-image: url("../img/bgLogoProfil.png");
+    display: flex;
+    justify-content: center;
+    border-radius: 50px;
+    width: 4vw;
+    height: 4vw;
+}
+
+.navButton {
+    width: 7vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navButton2 {
+    width: 14vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .primary {
     display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    width: calc(21vw + 40px);
+    width: calc(28vw + 60px);
 }
 
 
 /* -------------------- Main ------------------ */
 
 #main {
-    width: 100%;
+    width: auto;
     height: 80vh;
+    margin: 120px 7vw 0 7vw;
     background-image: url("./../img/bg.png");
     border-radius: 15px;
     display: flex;
@@ -99,11 +126,6 @@ a {
     position: absolute;
     text-align: center;
     padding: 0 0 50px 50px;
-}
-
-.btnTxt p {
-    font-size: 5em;
-    color: black;
 }
 
 #btnSub {
