--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,7 @@
 #footer {
     background-image: url("../img/bg.png");
     margin-top: 53px;
+    padding: 10px 30px;
     display: flex;
     flex-direction: column;
 }
@@ -13,6 +14,7 @@
 
 .partiFooter {
     display: flex;
+    flex: 1;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -22,23 +24,22 @@
     list-style: none;
 }
 
-.resFooter {
-    list-style: none;
-    text-align: right;
-    margin-right: 40px;
-    grid-column: 3;
-}
-
 .fab {
-    font-size: 41px;
+    font-size: 3em;
     color: white;
     margin: 0;
-    padding: 0;
+    padding: 5px;
+}
+
+.logoFooter {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerLogo {
-    grid-column: 2;
-    width: 329px;
+    width: 20vw;
     height: auto;
 }
 
@@ -53,17 +54,37 @@
 
 .barreSepa hr {
     background-color: #FDC324;
-    height: 0.5em;
+    height: 0.4em;
     border: none;
     width: 60%;
     margin: auto;
     margin-top: 2%;
 }
 
+.lienFooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .barreSepaPart hr {
     border: none;
     border-left: 1px solid hsla(200, 10%, 50%, 100);
     height: 20vh;
-    width: 0.5em;
+    width: 0.4em;
     background-color: #FDC324;
+}
+
+.titreFooter {
+    font-size: 3em;
+}
+
+.vide {
+    flex: 2;
+}
+
+.footerTitle {
+    flex: 1;
+    display: flex;
+    justify-content: center;
 }
