--- a/assets/css/formulaire.css
+++ b/assets/css/formulaire.css
@@ -71,8 +71,7 @@
 }
 
 .input {
-    height: 4em;
-    padding: 0 10px;
+    padding: 0 30px 0 10px;
     margin: 0 0 5px 20px;
     background-color: white;
     -moz-transition: all 0.2s ease-in;
@@ -124,7 +123,7 @@
     padding: 50px 0px;
 }
 
-.partie {
+.partieColumn {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -140,6 +139,52 @@
     position: absolute;
     text-align: center;
     padding: 5px 20px 30px 35px;
+}
+
+
+/* --------------------------------------------------------Form Smash------------------------------------------------ */
+
+.formulaireSmash {
+    background-image: url("../img/bg3.png");
+    margin: 120px 7vw 0 7vw;
+    border-radius: 15px;
+    padding: 30px;
+}
+
+.titleSmash {
+    font-family: 'badabb';
+    font-size: 3.5em;
+    text-align: center;
+}
+
+.partieRow {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    width: 80%;
+}
+
+#desc {
+    width: 60%;
+}
+
+.input textarea {
+    width: 100%;
+    height: 150px;
+    border: none;
+    outline: none;
+    padding: 6px 0 8px 5px;
+    margin: 0px 10px;
+    font-size: 14px;
+    color: black;
+    background-color: transparent;
+}
+
+.input.right textarea {
+    -moz-transform: skew(15deg, 0);
+    -ms-transform: skew(15deg, 0);
+    -webkit-transform: skew(15deg, 0);
+    transform: skew(15deg, 0);
 }
 
 
