--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ p {
     font-family: 'Architects Daughter', cursive;
     margin: 0;
     padding: 0;
+    font-size: 2em;
 }
 
 a {
@@ -21,6 +22,23 @@ a {
     text-decoration: none;
     font-size: 2em;
     cursor: pointer;
+}
+
+h1 {
+    font-family: "BADABB";
+    margin: 0;
+}
+
+h2 {
+    font-family: "BADABB";
+    font-size: 35px;
+    letter-spacing: 6px;
+}
+
+.whiteTitle {
+    -webkit-text-stroke: 0.5px black;
+    color: white;
+    letter-spacing: 3px;
 }
 
 
