--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -189,6 +189,18 @@ body {
     align-items: center;
 }
 
+.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
 .accordion p,
 .accordion i {
     -moz-transform: skew(15deg, 0);
